trunk/Archive2/61/8f633d7a356345/output
main.cpp: In function 'int main()':
main.cpp:10:38: error: no matching function for call to 'Size(const char [14])'
     std::cout << Size("Hello, world!") << std::endl;
                                      ^
main.cpp:10:38: note: candidate is:
main.cpp:4:14: note: template<class T, unsigned int ArraySize> unsigned int Size(T*)
 unsigned int Size(T array[ArraySize]) {
              ^
main.cpp:4:14: note:   template argument deduction/substitution failed:
main.cpp:10:38: note:   couldn't deduce template parameter 'ArraySize'
     std::cout << Size("Hello, world!") << std::endl;
                                      ^
